--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack",
     "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js --watch",
     "test:watch": "npm run test -- --watch",
-    "test:lint": "eslint src/** --ext .js --ext .jsx --ignore-path .gitignore --cache"
+    "lint": "eslint src/** --ext .js --ext .jsx --ignore-path .gitignore --cache"
   },
   "author": "",
   "license": "",
