load sass modules using boostrap-laoder load sass modules using bootstrap-loader

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.0",
+    "sass-resources-loader": "^1.1.0",
     "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
