--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
+    "react-spinkit": "^1.1.11",
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
