install airbnb and fix linting issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "es6": true,
         "amd": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["airbnb"],
+
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
