--- a/package.json
+++ b/package.json
@@ -60,8 +60,11 @@
     "cssnano": "^3.7.3",
     "dotenv": "^2.0.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.1.1",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.0",
+    "eslint-plugin-react": "^6.2.0",
     "expect": "^1.20.2",
     "file-loader": "^0.9.0",
     "hjs-webpack": "^8.3.0",
