--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "expect": "^1.20.2",
     "file-loader": "^0.9.0",
     "hjs-webpack": "^8.3.0",
+    "html-webpack-plugin": "^2.22.0",
     "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
     "jasmine-core": "^2.4.1",
