--- a/.bootstraprc
+++ b/.bootstraprc
@@ -4,11 +4,23 @@
   "bootstrapVersion": 3,
   "styleLoaders": ["style", "css", "sass"],
 
-    "appStyles":"./src/styles/global.scss",
+  "appStyles":"./src/styles/global.scss",
 
   "styles": true,
 
+  "env": {
+    "production": {
+        "extractStyles":true
+    },
+    "development": {
+        "extractStyles":false
+    }
+  },
+
   "scripts":true,
   "preBootstrapCustomizations": "./src/styles/pre-customizations.scss"
+
+
+
 
 }
