--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
     "jquery": "^3.1.0",
+    "json-fn": "^1.1.1",
+    "less": "^2.7.1",
     "node-sass": "^3.8.0",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
