--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline --hot",
     "clean": "rimraf dist",
     "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack",
-    "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js --watch",
+    "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "eslint src/** --ext .js --ext .jsx --fix --ignore-path .gitignore --cache"
   },
@@ -77,7 +77,7 @@
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.0",
+    "karma-coverage": "^1.1.1",
     "karma-coverage-es6": "^0.2.7",
     "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.1.1",
