--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,16 @@
       "presets": []
     },
     "test": {
-      "presets": []
+      "presets": [],
+      "plugins": [
+        [
+          "istanbul", {
+            "exclude": [
+              "**/*.spec.js"
+            ]
+          }
+        ]
+      ]
     }
   }
 }
