--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
+    "redux-api-middleware": "^1.0.2",
     "redux-immutable": "^3.0.6",
     "redux-module-builder": "0.0.12-0",
     "redux-thunk": "^2.1.0",
