--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline --hot",
     "clean": "rimraf dist",
     "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack",
+    "build:size": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack --json > stats.json",
     "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "eslint src/** --ext .js --ext .jsx --fix --ignore-path .gitignore --cache"
