--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fixed-data-table": "^0.6.3",
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
+    "immutable": "^3.8.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jquery": "^3.1.0",
     "json-fn": "^1.1.1",
@@ -45,8 +47,7 @@
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "immutable": "^3.8.1"
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
