--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-module-builder": "0.0.12-0",
     "redux-thunk": "^2.1.0",
     "resolve-url-loader": "^1.6.0",
+    "responsive-fixed-data-table": "^2.0.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7"
