add babel/rewire library. add more tests

--- a/.babelrc
+++ b/.babelrc
@@ -10,13 +10,23 @@
     "test": {
       "presets": [],
       "plugins": [
+
+
+
         [
           "istanbul", {
-            "exclude": [
-              "**/*.spec.js"
-            ]
-          }
-        ]
+          "exclude": [
+            "**/*.spec.js"
+          ]
+        }
+        ],
+
+        ["rewire",{
+          "exclude": [
+            "**/*.spec.js"
+          ]
+        }]
+
       ]
     }
   }
