--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-istanbul": "^2.0.0",
+    "babel-plugin-rewire": "^1.0.0-rc-7",
     "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
