--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
     "react-spinkit": "^1.1.11",
+    "react-zeroclipboard": "^3.2.2",
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
