--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,12 +38,12 @@
             2,
             "always"
         ],
-        "react/jsx-indent":"off",
-        "import/no-unresolved":"off",
-        "react/jsx-filename-extension":"off",
-        "max-len":"off",
-        "import/imports-first":"off",
-        "import/no-extraneous-dependencies":"off",
-        "padded-blocks":"off"
+        "react/jsx-indent":0,
+        "import/no-unresolved":0,
+        "react/jsx-filename-extension":0,
+        "max-len":0,
+        "import/imports-first":0,
+        "import/no-extraneous-dependencies":0,
+        "padded-blocks":0
     }
 }
