--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline --hot",
     "clean": "rimraf dist",
-    "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack",
+    "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack && node publish.js",
     "build:size": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack --json > stats.json",
     "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
