focus test coverage on features folder. add new test

--- a/.babelrc
+++ b/.babelrc
@@ -15,9 +15,8 @@
 
         [
           "istanbul", {
-          "exclude": [
-            "**/*.spec.js"
-          ]
+
+          "include": ["**/src/features/**/*.js"]
         }
         ],
 
