added ts-loader to webpack config
Former-commit-id: f1d72a331f2dbfa26a95f6e6f461c98788bdf230

--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,7 @@
         [
           "istanbul", {
 
-          "include": ["**/src/features/**/*.js"]
+          "include": ["**/tsDist/features/**/*.js"]
         }
         ],
 
