--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
     "immutable": "^3.8.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
     "jquery": "^3.1.0",
     "json-fn": "^1.1.1",
     "less": "^2.7.1",
@@ -38,7 +37,6 @@
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
     "react-spinkit": "^1.1.11",
-    "react-zeroclipboard": "^3.2.2",
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
@@ -53,14 +51,10 @@
     "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "zeroclipboard": "^2.2.0"
-  },
-  "devDependencies": {
+    "zeroclipboard": "^2.2.0",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-istanbul": "^2.0.0",
-    "babel-plugin-rewire": "^1.0.0-rc-7",
     "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -69,13 +63,31 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "bootstrap-loader": "^1.2.0-beta.1",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.5.0",
-    "cheerio": "^0.20.0",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
     "dotenv": "^2.0.0",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
+    "resolve-url-loader": "^1.6.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.0",
+    "sass-resources-loader": "^1.1.0",
+    "webpack": "^1.13.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "html-webpack-plugin": "^2.22.0",
+    "imports-loader": "^0.6.5"
+  },
+  "devDependencies": {
+    "babel-plugin-istanbul": "^2.0.0",
+    "babel-plugin-rewire": "^1.0.0-rc-7",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.0",
+    "cheerio": "^0.20.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
@@ -83,11 +95,8 @@
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-react": "^6.2.0",
     "expect": "^1.20.2",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.6.5",
     "jasmine-core": "^2.4.1",
-    "json-loader": "^0.5.4",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^1.1.1",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
@@ -99,23 +108,13 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
-    "node-sass": "^3.8.0",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
-    "postcss-loader": "^0.9.1",
-    "precss": "^1.4.0",
     "react-addons-test-utils": "^15.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
-    "resolve-url-loader": "^1.6.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
-    "sass-resources-loader": "^1.1.0",
     "sinon": "^1.17.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.15.0",
     "yargs": "^4.8.0"
   }
