Add precommit hook & store dist folder
While waiting for npm/npm#3055 to be fixed add dist/ folder to repo. This will
allow us to pull frontend compiled code in the parent cBioPortal project from
github.

- Add test to Travis making sure the dist folder is the same as that produced by the
  source code.
- Capitalize imports in  `routes.jsx`. OSX doesn't care about lower/uppercase,
  but Travis unix workers do.
- Add precommit hook running tests and adding the source code. Can be skipped
  with `--no-verify` or `-n`

Other **important** change requiring `.env` update see #44:

- Change __API_ROOT__ to include `api/`. New rc portal is using `api-legacy`
for the old api, so this allows one to specify which one to use.

Signed-off-by: Ino de Bruijn <ino@ino.pm>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "4.4.7"
+before_install:
+  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 install:
   - sudo apt-get install npm
   - npm config set registry http://registry.npmjs.org/
@@ -9,6 +11,9 @@ install:
   - npm install codecov.io
 script:
   - npm test
+  # Run build and test
+  - npm run build
+  - npm run comparedist
 after_success:
  # upload coverage data to codecov.io
  - cat coverage/*/lcov.info | codecov
