--- a/package.json
+++ b/package.json
@@ -5,29 +5,53 @@
   "scripts": {
     "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline --hot",
     "clean": "rimraf dist",
-    "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack && node prepare.js",
+    "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack",
     "build:size": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack --json > stats.json",
     "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
-    "lint": "eslint src/** --ext .js --ext .jsx --cache"
+    "lint": "eslint src/** --ext .js --ext .jsx --cache",
+    "prepublish": "npm run build && node prepare.js",
+    "storedist":"npm run build && find dist/ | xargs git add -f",
+    "comparedist": "./scripts/test_compare_dist_with_committed_dist.sh",
+    "validate": "npm ls"
   },
   "author": "",
   "license": "",
   "dependencies": {
+    "autoprefixer": "^6.3.7",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
+    "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
     "classnames": "^2.2.5",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
+    "cssnano": "^3.7.3",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "fixed-data-table": "^0.6.3",
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
+    "html-webpack-plugin": "^2.22.0",
     "immutable": "^3.8.1",
+    "imports-loader": "^0.6.5",
     "jquery": "^3.1.0",
     "json-fn": "^1.1.1",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
     "query-string": "^4.2.3",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
@@ -47,40 +71,14 @@
     "render-if": "^0.1.1",
     "resolve-url-loader": "^1.6.0",
     "responsive-fixed-data-table": "^2.0.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "underscore": "^1.8.3",
-    "url-loader": "^0.5.7",
-    "zeroclipboard": "^2.2.0",
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "bootstrap-loader": "^1.2.0-beta.1",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "cssnano": "^3.7.3",
-    "dotenv": "^2.0.0",
-    "file-loader": "^0.9.0",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
-    "precss": "^1.4.0",
-    "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
-    "webpack": "^1.13.1",
     "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.6.5"
+    "webpack": "^1.13.1",
+    "zeroclipboard": "^2.2.0"
   },
   "devDependencies": {
     "babel-plugin-istanbul": "^2.0.0",
@@ -110,6 +108,7 @@
     "mocha": "^2.5.3",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
+    "precommit-hook": "^3.0.0",
     "react-addons-test-utils": "^15.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -117,5 +116,10 @@
     "sinon": "^1.17.4",
     "webpack-dev-server": "^1.15.0",
     "yargs": "^4.8.0"
-  }
+  },
+  "pre-commit": [
+    "test",
+    "storedist",
+    "comparedist"
+  ]
 }
