--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "npm run test -- --watch",
     "lint": "eslint src/** --ext .js --ext .jsx --cache",
     "prepublish": "npm run build && node prepare.js",
-    "storedist":"npm run build && find dist/ | xargs git add -f",
+    "storedist": "npm run build && find dist/ | xargs git add -f",
     "comparedist": "./scripts/test_compare_dist_with_committed_dist.sh",
     "validate": "npm ls"
   },
@@ -61,6 +61,7 @@
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
     "react-spinkit": "^1.1.11",
+    "react-zeroclipboard": "^3.2.2",
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
@@ -77,8 +78,7 @@
     "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "zeroclipboard": "^2.2.0"
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "babel-plugin-istanbul": "^2.0.0",
