removed dependency on cross-env and npm scripts now work on Windows

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.3",
   "description": "",
   "scripts": {
-    "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline --hot",
+    "start": "webpack-dev-server --define process.env.NODE_ENV='\"production\"' --inline --hot",
     "clean": "rimraf dist",
-    "build": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack",
-    "build:size": "npm run clean && ./node_modules/.bin/cross-env NODE_ENV=production webpack --json > stats.json",
-    "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/karma/bin/karma start karma.conf.js",
+    "build": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --progress --colors",
+    "build:size": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --json > stats.json",
+    "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "eslint src/** --ext .js --ext .jsx --cache",
-    "storedist": "npm run build && find dist/ | xargs git add -f",
+    "storedist": "npm run build && git add -f dist",
     "comparedist": "./scripts/test_compare_dist_with_committed_dist.sh",
     "validate": "npm ls"
   },
@@ -31,7 +31,6 @@
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
     "classnames": "^2.2.5",
-    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
     "dotenv": "^2.0.0",
