fixed precommit hang on Windows
Former-commit-id: 55546b21440ff1e56076f5ace38179f48dd0814a

--- a/package.json
+++ b/package.json
@@ -119,8 +119,10 @@
     "webpack-fail-plugin": "^1.0.5",
     "yargs": "^4.8.0"
   },
-  "pre-commit": [
-    "storedist",
-    "comparedist"
-  ]
+  "pre-commit": {
+    "run": [
+      "storedist",
+      "comparedist"
+    ]
+  }
 }
