switching from precommit-hook to pre-commit npm package. fixed comparedist npm script for Windows.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "npm run test -- --watch",
     "lint": "eslint src/** --ext .js --ext .jsx --cache",
     "storedist": "npm run build && git add -f dist",
-    "comparedist": "./scripts/test_compare_dist_with_committed_dist.sh",
+    "comparedist": "bash ./scripts/test_compare_dist_with_committed_dist.sh",
     "validate": "npm ls"
   },
   "author": "",
@@ -91,8 +91,8 @@
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-react": "^6.2.0",
     "expect": "^1.20.2",
-    "jasmine-core": "^2.4.1",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
@@ -106,7 +106,7 @@
     "mocha": "^2.5.3",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
-    "precommit-hook": "^3.0.0",
+    "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
