Add mockData fetcher
Add a mockData fetcher that pulls the mockData from a given API. This way the
data can stay up to date. Currently Travis-CI won't fail if the data is out of
sync. It will just give a warning.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ script:
   # Run build and test
   - npm run build
   - npm run comparedist
+  # check if mock data up to data, show warning
+  - |
+      npm run syncmock || { \
+        echo 'WARNING: mock data out of sync with API return calls'; 
+      }
 after_success:
  # upload coverage data to codecov.io
  - cat coverage/*/lcov.info | codecov
