--- a/package.json
+++ b/package.json
@@ -79,13 +79,14 @@
     "webpack": "^1.13.1"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-plugin-istanbul": "^2.0.0",
     "babel-plugin-rewire": "^1.0.0-rc-7",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.5.0",
     "cheerio": "^0.20.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.4.0",
+    "eslint": "^3.7.1",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.0",
@@ -120,6 +121,7 @@
     "yargs": "^4.8.0"
   },
   "pre-commit": [
+    "lint",
     "storedist",
     "comparedist"
   ]
