working plotly graph

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
         "import/no-extraneous-dependencies":0,
         "padded-blocks":0,
         "react/prefer-stateless-function":0,
-        "comma-dangle":0
+        "comma-dangle":0,
+        "no-trailing-spaces":0
     }
 }
