--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.1",
     "react-dom": "^15.3.0",
+    "react-plotlyjs": "^0.3.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
