fix test coverage and issue with css extraction

--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,9 @@
         [
           "istanbul", {
 
-          "include": ["**/tsDist/features/**/*.js"]
+          "exclude": [
+            "**/*.spec.js"
+          ]
         }
         ],
 
