--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-spinkit": "^1.1.11",
     "react-tooltip": "^3.2.1",
     "react-zeroclipboard": "^3.2.2",
+    "reactable": "^0.14.0",
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
