--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server --define process.env.NODE_ENV='\"development\"' --inline --hot",
     "clean": "rimraf dist tsDist",
-    "build": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --progress --colors",
+    "build": "npm run clean && webpack --profile --define process.env.NODE_ENV='\"production\"' --progress --colors",
     "build:size": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --json > stats.json",
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
@@ -13,7 +13,7 @@
     "storedist": "npm run build && git add -f dist",
     "comparedist": "bash ./scripts/test_compare_dist_with_committed_dist.sh",
     "validate": "npm ls",
-    "test:aaron": "mocha transformOncoprint.spec.js --compilers js:../../../node_modules/babel-core/register"
+    "test:aaron": "mocha ./src/pages/queryResult/transformOncoprint.spec.js --compilers js:./node_modules/babel-core/register"
   },
   "author": "",
   "license": "",
