--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.3",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --define process.env.NODE_ENV='\"development\"' --inline --hot",
-    "clean": "rimraf dist tsDist",
-    "build": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --progress --colors",
+    "start": "webpack-dev-server --content-base /pookie/ --define process.env.NODE_ENV='\"development\"' --inline --hot",
+    "clean": "rimraf dist tsDist common-dist",
+    "build": "npm run clean && webpack --config vender-bundles.webpack.config.js && NODE_ENV=production webpack --define --progress --colors",
     "build:size": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --json > stats.json",
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
@@ -29,6 +29,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "bootstrap": "3.3.6",
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
@@ -87,6 +88,7 @@
     "chai-enzyme": "^0.5.0",
     "cheerio": "^0.20.0",
     "colors": "^1.1.2",
+    "copy-webpack-plugin": "^4.0.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
@@ -111,6 +113,7 @@
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
     "pre-commit": "^1.1.3",
+    "progress-bar-webpack-plugin": "^1.9.0",
     "react-addons-test-utils": "^15.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
