Add pom.xml so jitpack can be used to download
Remove dist folder from repo and all tests related to it. By adding a pom file
the dependencies can be downloaded through jitpack instead.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,8 @@ install:
   - npm install codecov.io
 script:
   - npm test
-  # Run build and test
+  # Run build
   - npm run build
-  - npm run comparedist
   # check if mock data up to data, show warning
   - |
       npm run syncmock || { \
