--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --content-base /pookie/ --define process.env.NODE_ENV='\"development\"' --inline --hot",
     "clean": "rimraf dist tsDist common-dist",
-    "build": "npm run clean && webpack --config vender-bundles.webpack.config.js && NODE_ENV=production webpack --define --progress --colors",
+    "build": "npm run clean && npm run buildDLL && NODE_ENV=production webpack --define --progress --colors",
+    "buildDLL": "npm run clean && NODE_ENV=production webpack --config vender-bundles.webpack.config.js",
     "build:size": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --json > stats.json",
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
