--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.3",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --content-base /pookie/ --define process.env.NODE_ENV='\"development\"' --inline --hot",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
     "clean": "rimraf dist tsDist common-dist",
-    "build": "npm run clean && npm run buildDLL && NODE_ENV=production webpack --define --progress --colors",
-    "buildDLL": "npm run clean && NODE_ENV=production webpack --config vender-bundles.webpack.config.js",
-    "build:size": "npm run clean && webpack --define process.env.NODE_ENV='\"production\"' --json > stats.json",
+    "build": "npm run clean && npm run buildDLL && cross-env NODE_ENV=production webpack --progress --colors",
+    "buildDLL": "npm run clean && cross-env NODE_ENV=production webpack --config vendor-bundles.webpack.config.js",
+    "build:size": "npm run clean && cross-env NODE_ENV=production webpack --json > stats.json",
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
-    "lint": "tslint $(find . -name '*.tsx')",
+    "lint": "find . -name '*.tsx' | xargs tslint",
     "eslint": "eslint src/** --ext .js --ext .jsx --cache",
     "syncmock": "node src/test/fetchMockData.js --diff",
     "validate": "npm ls"
@@ -88,6 +88,7 @@
     "cheerio": "^0.20.0",
     "colors": "^1.1.2",
     "copy-webpack-plugin": "^4.0.0",
+    "cross-env": "^3.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
