--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
     "html-webpack-plugin": "^2.22.0",
-    "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
     "jquery": "^3.1.0",
     "json-fn": "^1.1.1",
@@ -67,6 +66,7 @@
     "redux-api-middleware": "^1.0.2",
     "redux-immutable": "^3.0.6",
     "redux-module-builder": "0.0.12-0",
+    "redux-seamless-immutable": "^0.3.0",
     "redux-thunk": "^2.1.0",
     "render-if": "^0.1.1",
     "resolve-url-loader": "^1.6.0",
@@ -74,6 +74,7 @@
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
+    "seamless-immutable": "^6.3.0",
     "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
