Use swagger-js-codegen to generate TypeScript API
Add missing.d.ts

Revert package.json

migrate to TS for clinical information data tables

Update generated API code

adapt transformation to avoid unnecessary intermediate types. use new api typings on samples table. adapt transformation to avoid unnecessary intermediate types

fix typings in patient table

fix tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     },
     "include": [
         "./typings/index.d.ts",
+        "./typings/missing.d.ts",
         "./src/**/*"
     ],
     "compileOnSave": false
