--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "npm run clean && npm run buildDLL && cross-env NODE_ENV=production webpack --progress --colors",
     "buildDLL": "npm run clean && cross-env NODE_ENV=production webpack --config vendor-bundles.webpack.config.js",
     "build:size": "npm run clean && cross-env NODE_ENV=production webpack --json > stats.json",
+    "updateAPI": "npm run fetchAPI && npm run buildAPI",
+    "fetchAPI": "curl http://cbioportal-rc.herokuapp.com/api/v2/api-docs > src/shared/api/CBioPortalAPI-docs.json",
+    "buildAPI": "node scripts/generate-api.js",
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "find . -name '*.tsx' | xargs tslint",
@@ -78,6 +81,7 @@
     "sass-resources-loader": "^1.1.0",
     "seamless-immutable": "^6.3.0",
     "style-loader": "^0.13.1",
+    "superagent": "^2.3.0",
     "swagger-client": "^2.1.23",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
@@ -121,8 +125,10 @@
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
+    "request": "^2.76.0",
     "sinon": "^1.17.4",
     "source-map-loader": "^0.1.5",
+    "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
     "ts-loader": "^0.8.2",
     "tslint": "^3.15.1",
     "tslint-react": "^1.0.0",
