migrate clincical information tables to use reactablemsk component
intermediate

migrate tables to datatables

more

typescript tests

disable coverage reporting

move tiles inline with copy buttons

Use reactable for patient and sample tables

blah

fix branch


Former-commit-id: a61dc3b4d166afa719f4ac5d933257d773935d8a

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
     "clean": "rimraf dist tsDist common-dist",
-    "build": "npm run clean && npm run buildDLL && cross-env NODE_ENV=production webpack --progress --colors",
-    "buildDLL": "npm run clean && cross-env NODE_ENV=production webpack --config vendor-bundles.webpack.config.js",
+    "build": "npm run clean && npm run buildDLL:prod && cross-env NODE_ENV=production webpack --progress --colors",
+    "buildDLL:prod": "npm run clean && cross-env NODE_ENV=production webpack --config vendor-bundles.webpack.config.js",
+    "buildDLL:dev": "npm run clean && cross-env NODE_ENV=development webpack --config vendor-bundles.webpack.config.js",
     "build:size": "npm run clean && cross-env NODE_ENV=production webpack --json > stats.json",
     "updateAPI": "npm run fetchAPI && npm run buildAPI",
     "fetchAPI": "curl http://cbioportal-rc.herokuapp.com/api/v2/api-docs > src/shared/api/CBioPortalAPI-docs.json",
@@ -35,6 +36,7 @@
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
+    "reactableMSK":"https://github.com/alisman/reactable.git",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
     "dotenv": "^2.0.0",
