--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "module": "es6",
         "target": "es6",
         "jsx": "preserve",
-        "allowJs": true
+        "allowJs": true,
+        "experimentalDecorators": true
     },
     "include": [
         "./typings/index.d.ts",
