Enable heroku deploy
Enable deploy on heroku using nodejs buildpack. Move several dependencies to
production dependencies. These are required for heroku to build the project.
Also add postbuild step for heroku to install http-server.

List of deps moved from dev to production in package.json:

- webpack-fail-plugin
- webpack-progress-bar
- cross-env
- copy-webpack-plugin
- source-map-loader
- ts-loader
- typescript

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "buildDLL:prod": "npm run clean && cross-env NODE_ENV=production webpack --config vendor-bundles.webpack.config.js",
     "buildDLL:dev": "npm run clean && cross-env NODE_ENV=development webpack --config vendor-bundles.webpack.config.js",
     "build:size": "npm run clean && cross-env NODE_ENV=production webpack --json > stats.json",
+    "heroku-postbuild": "npm run build && npm install http-server -g",
     "updateAPI": "npm run fetchAPI && npm run buildAPI",
     "fetchAPI": "curl http://cbioportal-rc.herokuapp.com/api/v2/api-docs > src/shared/api/CBioPortalAPI-docs.json",
     "buildAPI": "node scripts/generate-api.js",
@@ -36,6 +37,8 @@
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
+    "copy-webpack-plugin": "^4.0.0",
+    "cross-env": "^3.1.3",
     "reactableMSK":"https://github.com/alisman/reactable.git",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
@@ -56,6 +59,7 @@
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "query-string": "^4.2.3",
+    "progress-bar-webpack-plugin": "^1.9.0",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.1",
@@ -82,12 +86,16 @@
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
     "seamless-immutable": "^6.3.0",
+    "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "superagent": "^2.3.0",
     "swagger-client": "^2.1.23",
+    "ts-loader": "^0.8.2",
+    "typescript": "^2.1.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-fail-plugin": "^1.0.5"
   },
   "devDependencies": {
     "argparse": "^1.0.9",
@@ -97,8 +105,6 @@
     "chai-enzyme": "^0.5.0",
     "cheerio": "^0.20.0",
     "colors": "^1.1.2",
-    "copy-webpack-plugin": "^4.0.0",
-    "cross-env": "^3.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
@@ -122,21 +128,16 @@
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
     "pre-commit": "^1.1.3",
-    "progress-bar-webpack-plugin": "^1.9.0",
     "react-addons-test-utils": "^15.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "request": "^2.76.0",
     "sinon": "^1.17.4",
-    "source-map-loader": "^0.1.5",
     "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
-    "ts-loader": "^0.8.2",
     "tslint": "^3.15.1",
     "tslint-react": "^1.0.0",
-    "typescript": "^2.1.1",
     "webpack-dev-server": "^1.15.0",
-    "webpack-fail-plugin": "^1.0.5",
     "yargs": "^4.8.0"
   },
   "pre-commit": [
