New query selector interface

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "tslint 'src/**/*.ts' 'src/**/*.tsx' --exclude 'src/shared/api/generated/**'",
+    "lint-fix": "tslint --fix 'src/**/*.ts' 'src/**/*.tsx' --exclude 'src/shared/api/generated/**'",
     "eslint": "eslint src/** --ext .js --ext .jsx --cache",
     "syncmock": "node src/test/fetchMockData.js --diff",
     "validate": "npm ls"
@@ -43,8 +44,11 @@
     "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
+    "@types/react-fontawesome": "^1.5.0",
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^2.0.46",
+    "@types/react-spinkit": "^1.1.29",
+    "@types/recompose": "^0.20.4",
     "@types/reselect": "^2.0.27",
     "@types/route-parser": "0.0.0",
     "@types/seamless-immutable": "^6.1.2",
@@ -90,6 +94,7 @@
     "less": "^2.7.2",
     "lodash": "^4.17.4",
     "lolex": "^1.6.0",
+    "memoize-weak-decorator": "^1.0.3",
     "mobx": "^3.1.7",
     "mobx-react": "^4.1.3",
     "mobx-react-devtools": "^4.2.11",
@@ -113,6 +118,7 @@
     "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.2",
+    "react-fontawesome": "^1.5.0",
     "react-height": "^2.2.0",
     "react-if": "^2.1.0",
     "react-motion": "^0.4.7",
@@ -120,11 +126,14 @@
     "react-renderif": "^1.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
+    "react-select": "^1.0.0-rc.3",
+    "react-spinkit": "^1.1.0",
     "react-tooltip": "^3.2.2",
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
     "reactableMSK": "git+https://github.com/alisman/reactable.git",
     "recharts": "^0.20.5",
+    "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-api-middleware": "^1.0.2",
