squashed commits for Cancer study selector

--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@types/rc-tooltip": "^3.4.2",
     "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
+    "@types/react-bootstrap-table": "^2.6.1",
     "@types/react-dom": "^0.14.21",
     "@types/react-redux": "^4.4.36",
+    "@types/react-fontawesome": "^1.1.1",
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
     "@types/reselect": "^2.0.27",
@@ -113,6 +115,7 @@
     "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.2",
+    "react-fontawesome": "^1.4.0",
     "react-height": "^2.2.0",
     "react-if": "^2.1.0",
     "react-motion": "^0.4.7",
@@ -120,7 +123,8 @@
     "react-renderif": "^1.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
-    "react-spinkit": "^1.1.0",
+    "react-select": "^1.0.0-rc.2",
+    "react-spinkit": "^2.0.0",
     "react-tooltip": "^3.2.2",
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
