--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "json-fn": "^1.1.1",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
+    "lodash": "^4.17.2",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
@@ -65,8 +66,10 @@
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.1",
+    "react-bootstrap-table": "^2.6.0",
     "react-dom": "^15.3.0",
     "react-file-download": "^0.3.1",
+    "react-fontawesome": "^1.4.0",
     "react-redux": "^4.4.5",
     "react-renderif": "^1.0.2",
     "react-router": "^2.5.2",
