--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cross-env": "^3.1.3",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
+    "d3": "^3.5.6",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -62,6 +63,7 @@
     "qtip": "0.0.4",
     "qtip2": "^3.0.3",
     "query-string": "^4.2.3",
+    "rc-tooltip":"^3.4.2",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.1",
