--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^15.3.0",
     "react-file-download": "^0.3.1",
     "react-redux": "^4.4.5",
+    "react-renderif": "^1.0.2",
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
     "react-spinkit": "^1.1.11",
