--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-renderif": "^1.0.2",
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
+    "react-select": "^1.0.0-rc.2",
     "react-spinkit": "^1.1.11",
     "react-tooltip": "^3.2.1",
     "react-zeroclipboard": "^3.2.2",
