--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "render-if": "^0.1.1",
     "resolve-url-loader": "^1.6.0",
     "responsive-fixed-data-table": "^2.0.0",
+    "rc-tooltip": "^3.4.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
