--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "qtip": "0.0.4",
     "qtip2": "^3.0.3",
     "query-string": "^4.2.3",
+    "rc-tooltip": "^3.4.2",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.1",
@@ -74,6 +75,7 @@
     "react-spinkit": "^1.1.11",
     "react-tooltip": "^3.2.1",
     "react-zeroclipboard": "^3.2.2",
+    "reactable": "^0.14.1",
     "reactableMSK": "https://github.com/alisman/reactable.git",
     "recharts": "^0.12.8",
     "redux": "^3.5.2",
@@ -86,7 +88,6 @@
     "render-if": "^0.1.1",
     "resolve-url-loader": "^1.6.0",
     "responsive-fixed-data-table": "^2.0.0",
-    "rc-tooltip": "^3.4.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
