--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "qtip2": "^3.0.3",
     "query-string": "^4.2.3",
     "rc-tooltip": "^3.4.2",
-    "react": "^15.3.0",
+    "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.3.0",
+    "react-addons-test-utils": "15.4.2",
     "react-bootstrap": "^0.30.1",
-    "react-dom": "^15.3.0",
+    "react-dom": "^15.4.2",
     "react-file-download": "^0.3.1",
+    "react-if": "^2.1.0",
     "react-redux": "^4.4.5",
     "react-renderif": "^1.0.2",
     "react-router": "^2.5.2",
