--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.1",
     "react-fontawesome": "^1.4.0",
+    "react-radio-group": "^3.0.1",
     "react-redux": "^4.4.5",
     "react-renderif": "^1.0.2",
     "react-router": "^2.5.2",
