added Cancer Hotspots and 3D Hotspots support for the annotation column
Former-commit-id: 70b26662d372b1765c2afe14804e237b8d1fdf3f

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "updateAPI": "npm run fetchAPI && npm run buildAPI",
     "fetchAPI": "curl http://cbioportal-rc.herokuapp.com/api/v2/api-docs > src/shared/api/CBioPortalAPI-docs.json && curl http://cbioportal-rc.herokuapp.com/api/v2/api-docs?group=internal > src/shared/api/CBioPortalAPIInternal-docs.json",
     "buildAPI": "node scripts/generate-api.js",
+    "updateHotspotsAPI": "npm run fetchHotspotsAPI && npm run buildHotspotsAPI",
+    "fetchHotspotsAPI": "curl http://cancerhotspots.org/v2/api-docs?group=cancer_hotspots > src/shared/api/CancerHotspotsAPI-docs.json",
+    "buildHotspotsAPI": "node scripts/generate-hotspots-api.js",
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "find . -name '*.tsx' | xargs tslint",
