--- a/package.json
+++ b/package.json
@@ -24,129 +24,141 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
+    "autoprefixer": "^6.6.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "bootstrap": "3.3.6",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "bootstrap": "^3.3.7",
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
-    "copy-webpack-plugin": "^4.0.0",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.23.1",
-    "cssnano": "^3.7.3",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "cssnano": "^3.10.0",
     "d3": "^3.5.6",
-    "dotenv": "^2.0.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "fixed-data-table": "^0.6.3",
-    "font-awesome": "^4.6.3",
-    "font-awesome-webpack": "0.0.4",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.6.5",
-    "jquery": "^3.1.0",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "^0.0.4",
+    "html-webpack-plugin": "^2.26.0",
+    "imports-loader": "^0.7.0",
+    "jquery": "^3.1.1",
     "json-fn": "^1.1.1",
     "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
+    "less": "^2.7.2",
+    "node-sass": "^4.2.0",
+    "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
-    "progress-bar-webpack-plugin": "^1.9.0",
+    "progress-bar-webpack-plugin": "^1.9.2",
     "qtip2": "^3.0.3",
     "query-string": "^4.2.3",
     "rc-tooltip": "^3.4.2",
     "react": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "15.4.2",
-    "react-bootstrap": "^0.30.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
-    "react-file-download": "^0.3.1",
+    "react-file-download": "^0.3.2",
     "react-if": "^2.1.0",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.2",
     "react-renderif": "^1.0.2",
-    "react-router": "^2.5.2",
-    "react-router-redux": "^4.0.5",
+    "react-router": "^3.0.1",
+    "react-router-redux": "^4.0.7",
     "react-spinkit": "^1.1.11",
-    "react-tooltip": "^3.2.1",
+    "react-tooltip": "^3.2.2",
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
-    "reactableMSK": "https://github.com/alisman/reactable.git",
-    "recharts": "^0.12.8",
-    "redux": "^3.5.2",
-    "redux-actions": "^0.11.0",
+    "reactableMSK": "git+https://github.com/alisman/reactable.git",
+    "recharts": "^0.20.2",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.0",
     "redux-api-middleware": "^1.0.2",
-    "redux-immutable": "^3.0.6",
-    "redux-module-builder": "0.0.12-0",
+    "redux-immutable": "^3.0.10",
+    "redux-module-builder": "^0.3.2",
     "redux-seamless-immutable": "^0.3.0",
     "redux-thunk": "^2.1.0",
     "render-if": "^0.1.1",
-    "resolve-url-loader": "^1.6.0",
+    "resolve-url-loader": "^1.6.1",
     "responsive-fixed-data-table": "^2.0.0",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.1.1",
     "sass-resources-loader": "^1.1.0",
-    "seamless-immutable": "^6.3.0",
-    "source-map-loader": "^0.1.5",
+    "seamless-immutable": "^7.0.1",
+    "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
-    "superagent": "^2.3.0",
-    "swagger-client": "^2.1.23",
-    "ts-loader": "^0.8.2",
-    "typescript": "^2.1.4",
+    "superagent": "^3.3.2",
+    "swagger-client": "^2.1.31",
+    "swagger-js-codegen": "git+https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
+    "ts-loader": "^1.3.3",
+    "typescript": "^2.1.5",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^1.14.0",
     "webpack-fail-plugin": "^1.0.5",
     "webpack-raphael": "^2.1.4"
   },
   "devDependencies": {
+    "@types/jquery": "^2.0.39",
+    "@types/lodash": "^4.14.48",
+    "@types/query-string": "^3.0.31",
+    "@types/raphael": "^2.1.30",
+    "@types/react": "^15.0.0",
+    "@types/react-bootstrap": "0.0.37",
+    "@types/react-dom": "^0.14.20",
+    "@types/react-spinkit": "^1.1.28",
+    "@types/redux": "^3.6.0",
+    "@types/seamless-immutable": "^6.1.2",
+    "@types/superagent": "^2.0.36",
     "argparse": "^1.0.9",
-    "babel-plugin-istanbul": "^2.0.0",
-    "babel-plugin-rewire": "^1.0.0-rc-7",
+    "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-rewire": "^1.0.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.5.0",
-    "cheerio": "^0.20.0",
+    "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
     "colors": "^1.1.2",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.2.0",
+    "enzyme": "^2.7.0",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.1.1",
+    "istanbul-instrumenter-loader": "^1.2.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-coverage-es6": "^0.2.7",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.5.3",
-    "phantomjs-polyfill": "0.0.2",
-    "phantomjs-prebuilt": "^2.1.7",
-    "pre-commit": "^1.1.3",
-    "react-addons-test-utils": "^15.3.0",
+    "karma-spec-reporter": "^0.0.26",
+    "karma-webpack": "^2.0.1",
+    "mocha": "^3.2.0",
+    "phantomjs-polyfill": "^0.0.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "pre-commit": "^1.2.2",
+    "react-addons-test-utils": "^15.4.2",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "request": "^2.76.0",
-    "sinon": "^1.17.4",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "request": "^2.79.0",
+    "sinon": "^1.17.7",
     "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
-    "tslint": "^3.15.1",
-    "tslint-react": "^1.0.0",
-    "webpack-dev-server": "^1.15.0",
-    "yargs": "^4.8.0"
+    "tslint": "^4.3.1",
+    "tslint-react": "^2.3.0",
+    "webpack-dev-server": "^1.16.2",
+    "yargs": "^6.6.0"
   }
 }
