--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "redux-seamless-immutable": "^0.3.0",
     "redux-thunk": "^2.1.0",
     "render-if": "^0.1.1",
+    "reselect": "^2.5.4",
     "resolve-url-loader": "^1.6.1",
     "responsive-fixed-data-table": "^2.0.0",
     "rimraf": "^2.5.4",
@@ -111,8 +112,10 @@
     "@types/jquery": "^2.0.39",
     "@types/lodash": "^4.14.48",
     "@types/query-string": "^3.0.31",
+    "@types/mocha": "^2.2.0",
     "@types/raphael": "^2.1.30",
     "@types/react": "^15.0.0",
+    "@types/chai": "^3.4.28",
     "@types/react-bootstrap": "0.0.37",
     "@types/react-dom": "^0.14.20",
     "@types/react-spinkit": "^1.1.28",
